Fixed long events description overflow in activity

--- a/applications/vessel-history/src/features/profile/components/activity/Activity.module.css
+++ b/applications/vessel-history/src/features/profile/components/activity/Activity.module.css
@@ -18,6 +18,10 @@
   padding: 0 var(--space-S);
 }
 
+.event .eventData {
+  overflow: hidden;
+}
+
 .event .eventData .date {
   font-size: 1rem;
   line-height: var(--space-S);
